k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - bus3.fayizcj.in
        - www.bus3.fayizcj.in
      secretName: bus3-tls
  rules:
    - host: bus3.fayizcj.in
      http:
        paths: 
         - path: /api/srt/?(.*)
           pathType:  ImplementationSpecific
           backend:
              service:
                name: state-operators-srv
                port:
                  number: 3000
         - path: /api/pvt/?(.*)
           pathType:  ImplementationSpecific
           backend:
              service:
                name: private-operators-srv
                port:
                  number: 3000   
         - path: /api/?(.*)
           pathType:  ImplementationSpecific
           backend:
              service:
                name: passenger-srv
                port:
                  number: 3000  
         - path: /api/lt?(.*)
           pathType:  ImplementationSpecific
           backend:
              service:
                name: live-tracking-srv
                port:
                  number: 3000  
         - path: /api/search?(.*)
           pathType:  ImplementationSpecific
           backend:
              service:
                name: search-srv
                port:
                  number: 3000  
         - path: /api/buspass?(.*)
           pathType:  ImplementationSpecific
           backend:
              service:
                name: bus-pass-srv
                port:
                  number: 3000  
         - path: /api/order?(.*)
           pathType:  ImplementationSpecific
           backend:
              service:
                name: order-srv
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'bus3.fayizcj.in'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
